fix sizing of cover page on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -60,7 +60,7 @@ body {
 
 @media only screen and (max-width: 1000px) {
   .cover-page {
-    padding-top: 200px;
+    padding-top: 100px;
   }
 }
 
@@ -76,7 +76,7 @@ body {
 
 @media only screen and (max-width: 1000px) {
   .description {
-    font-size: 0.8rem;
+    font-size: 1rem;
   }
 }
 
